GoalTracker/force-app/main/default/objects/Charitable_Designation__c/Charitable_Designation__c.object-meta.xml
<CustomObject>
    <label>Charitable Designation</label>
    <nameField>
        <label>Charitable Desgination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charitable Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>