GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charitable Designations</relationshipLabel>
    <relationshipName>Charitable_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>