GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/Designation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Designation_Comments__c</fullName>
    <description>Name of &apos;Other&apos; designated fund.</description>
    <label>Designation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>