GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/Gift_Area__c.field-meta.xml
<CustomField>
    <fullName>Gift_Area__c</fullName>
    <description>The Gift Area for this designation</description>
    <inlineHelpText>The Gift Area for this designation</inlineHelpText>
    <label>Gift Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>