GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/LL_Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>LL_Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LL- Chart of Accounts</label>
    <referenceTo>AQB__LLChartofAccounts__c</referenceTo>
    <relationshipLabel>Charitable Designations</relationshipLabel>
    <relationshipName>Charitable_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>