GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>pymt__PaymentX__c</referenceTo>
    <relationshipLabel>Charitable Designations</relationshipLabel>
    <relationshipName>Charitable_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>