GoalTracker/force-app/main/default/objects/Charitable_Designation__c/fields/Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Payment</label>
    <referenceTo>pymt__Payment_Profile__c</referenceTo>
    <relationshipLabel>Charitable Designations</relationshipLabel>
    <relationshipName>Charitable_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>