GoalTracker/force-app/main/default/objects/Charitable_Designation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LL_Chart_of_Accounts__c</columns>
    <columns>Payment__c</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Gift_Area__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>